z-index fix, and added README.md

--- a/assets/scss/_cogs.scss
+++ b/assets/scss/_cogs.scss
@@ -31,8 +31,8 @@
                 z-index: $z;
             }
             $i: $i + 1;
-            $z: $z + 1;
             $b: $i <= 6;
+            $z: if($b, $z + 1, $z - 1);
             $l: if($b, $l + 15, $l + 13);
             $s: if($b, $s - 2, $s + 2);
             $t: if($b, $t + 1, $t - 1);
